# bitteragent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  system.md
.github/workflows/: publish.yml  test.yml
bitteragent/: __init__.py  __main__.py  agent.py  tools.py
bitteragent/native_tools/: __init__.py  shell.py
bitteragent/providers/: anthropic.py  base.py
tbench/: .gitignore  README.md  bitteragent-install.sh  get_easy_tasks.py  run_easy_tasks.sh  run_terminal_bench.sh  terminal_bench_adapter.py  terminal_bench_installed_adapter.py  tinyagent-install.sh  tinyagent-setup.sh
tests/: test_agent.py  test_tools.py
tinyagent/: __main__.py  agent.py  cli.py  tools.py
tinyagent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tinyagent/adapters/: openai.py
tinyagent/native_tools/: file_ops.py  shell.py
tinyagent/providers/: anthropic.py
